--- a/Assignments/2/code2_assignment_2.ipynb
+++ b/Assignments/2/code2_assignment_2.ipynb
@@ -17,10 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "3d52d2d2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-11T19:22:24.903421Z",
+     "start_time": "2024-10-11T19:22:23.630462Z"
+    }
+   },
    "source": [
     "# Import the necessary libraries\n",
     "import numpy as np # For calculations\n",
@@ -29,16 +32,56 @@
     "from matplotlib.ticker import (MultipleLocator, FormatStrFormatter,AutoMinorLocator) #make plot nicer\n",
     "import pandas as pd # For reading the data\n",
     "import os #For flexible path way to data"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "8f4ebccf",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-11T20:40:10.559468Z",
+     "start_time": "2024-10-11T20:40:10.539829Z"
+    }
+   },
+   "source": [
+    "# Define the path in a more flexible way\n",
+    "root_folder = os.getcwd()\n",
+    "data_file = os.path.join(root_folder, 'pressureRatio.dat')\n",
+    "#Read data file using pandas package\n",
+    "data = pd.read_csv(data_file, delim_whitespace=True )\n",
+    "columns_title =data.columns\n",
+    "print(\"Column tiltes\", columns_title)\n",
+    "data.head()"
+   ],
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column tiltes Index(['Num', 'Radius', 'R_e+', 'R_e-', 'E1', 'E1_e+', 'E1_e-', 'E2', 'E2_e+',\n",
+      "       'E2_e+.1', 'ratio', 'r_e+', 'r_e-'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
      "data": {
+      "text/plain": [
+       "   Num  Radius  R_e+  R_e-     E1  E1_e+  E1_e-     E2  E2_e+  E2_e+.1  ratio  \\\n",
+       "0    1   221.1  11.0  12.3   8.30   0.76   0.88   9.67   1.14     1.12   0.86   \n",
+       "1    2   268.5  22.1  20.7   4.92   0.77   0.70   4.19   0.82     0.70   1.17   \n",
+       "2    3   138.4  12.7  11.9   3.03   0.53   0.49   2.61   0.59     0.49   1.16   \n",
+       "3    4   714.3  23.5  34.5  49.61   3.15   3.19  60.62   4.84     6.13   0.82   \n",
+       "4    5   182.3  18.5  15.1   2.75   0.49   0.43   3.30   0.81     0.61   0.83   \n",
+       "\n",
+       "   r_e+  r_e-  \n",
+       "0  0.08  0.07  \n",
+       "1  0.16  0.15  \n",
+       "2  0.20  0.18  \n",
+       "3  0.06  0.05  \n",
+       "4  0.14  0.14  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -157,37 +200,30 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "   Num  Radius  R_e+  R_e-     E1  E1_e+  E1_e-     E2  E2_e+  E2_e+.1  ratio  \\\n",
-       "0    1   221.1  11.0  12.3   8.30   0.76   0.88   9.67   1.14     1.12   0.86   \n",
-       "1    2   268.5  22.1  20.7   4.92   0.77   0.70   4.19   0.82     0.70   1.17   \n",
-       "2    3   138.4  12.7  11.9   3.03   0.53   0.49   2.61   0.59     0.49   1.16   \n",
-       "3    4   714.3  23.5  34.5  49.61   3.15   3.19  60.62   4.84     6.13   0.82   \n",
-       "4    5   182.3  18.5  15.1   2.75   0.49   0.43   3.30   0.81     0.61   0.83   \n",
-       "\n",
-       "   r_e+  r_e-  \n",
-       "0  0.08  0.07  \n",
-       "1  0.16  0.15  \n",
-       "2  0.20  0.18  \n",
-       "3  0.06  0.05  \n",
-       "4  0.14  0.14  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# Define the path in a more flexible way\n",
-    "root_folder = os.getcwd()\n",
-    "data_file = os.path.join(root_folder, 'pressureRatio.dat')\n",
-    "#Read data file using pandas package\n",
-    "data = pd.read_csv(data_file, delim_whitespace=True)\n",
+    "### Section a)\n",
     "\n",
-    "data.head()"
-   ]
+    "For calculating the wighted average for the data set $\\{x_1,\\cdots,x_N\\}$, such that $x_i$ has uncertainty $\\sigma_i$; we require to define some wight for $x_i$ such as\n",
+    "$$ w_i =\\frac{1}{\\sigma^2},$$\n",
+    "then according to the definition the wighted average will be \n",
+    "$$ \\bar{x} = \\frac{\\sum_{i=1}^{N}x_i\\times w_i}{\\sum_{i=1}^{N} w_i}.$$\n",
+    "\n",
+    "The \n",
+    "\n"
+   ],
+   "id": "1ab7775a88c2d7e1"
   },
   {
    "cell_type": "code",
@@ -195,7 +231,16 @@
    "id": "8fd2a178",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to calculate weighted average and standard deviation\n",
+    "def wighted_average_std(u_bound, l_bound, data):\n",
+    "    '''u_bound and l_bound are lists of floats given by input data set\n",
+    "    data is given list of float numbers that are given in each column\n",
+    "    output: float numbers average wighted and Standard deviation'''\n",
+    "    sigma2 = ((u_bound+l_bound)/2)**2 # Average the asymmetric errors\n",
+    "    wight = 1/sigma2\n",
+    "    return np.sum(data*wight)/np.sum(wight) , np.sqrt(1/np.sum(wight))"
+   ]
   }
  ],
  "metadata": {
