--- a/Assignments/2/code2_assignment_2.ipynb
+++ b/Assignments/2/code2_assignment_2.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "When we add 0.1 to the uncertainties $\\sigma_i$ we have :\n",
     "$$  {\\sigma_i^2}^{\\pm0.1} := (\\frac{r_{e+}+r_{e-}}{2} \\pm 0.1 )^2>\\sigma_i^2,$$\n",
-    "$$ {w_i}^{+0.1} :=\\frac{1}{ {\\sigma_i^2}^{\\pm0.1}} =\\frac{1}{ ({\\sigma_i}\\pm0.1)^2} < w_i.$$\n",
+    "$$ {w_i}^{\\pm0.1} :=\\frac{1}{ {\\sigma_i^2}^{\\pm0.1}} =\\frac{1}{ ({\\sigma_i}\\pm0.1)^2} < w_i.$$\n",
     "\n",
     "Then according to the definition the wighted average we can show \n",
     "$$ \\bar{x}^{\\pm0.1} = \\frac{\\sum_{i=1}^{N}x_i\\times {w_i}^{\\pm0.1} }{\\sum_{i=1}^{N} {w_i}^{\\pm0.1} } > \\bar{x}.$$\n",
