--- a/Assignments/1/code2_assignment_1.ipynb
+++ b/Assignments/1/code2_assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "a4d5b584",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version: 3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]\n",
-      "NumPy version: 1.23.5\n",
-      "Matplotlib version: 3.4.2\n",
-      "SciPy version: 1.9.1\n",
-      "Pandas version: 1.5.3\n"
+      "Python version: 3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23716/991585498.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Print the version of each package\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Python version:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mversion\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"NumPy version:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Matplotlib version:\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"SciPy version:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
    "source": [
-    "# #Please DO NOT RUN! This is for printing versions of my packages.\n",
-    "# import sys  # Import sys to get Python version\n",
-    "# import matplotlib\n",
-    "# import scipy\n",
-    "# import pandas\n",
+    "#Please DO NOT RUN! This is for printing versions of my packages.\n",
+    "import sys  # Import sys to get Python version\n",
+    "import matplotlib\n",
+    "import scipy\n",
+    "import pandas\n",
     "\n",
-    "# # Print the version of each package\n",
-    "# print(\"Python version:\", sys.version)\n",
-    "# print(\"NumPy version:\", np.__version__)\n",
-    "# print(\"Matplotlib version:\",matplotlib.__version__)\n",
-    "# print(\"SciPy version:\", scipy.__version__)\n",
-    "# print(\"Pandas version:\", pandas.__version__)"
+    "# Print the version of each package\n",
+    "print(\"Python version:\", sys.version)\n",
+    "print(\"NumPy version:\", np.__version__)\n",
+    "print(\"Matplotlib version:\",matplotlib.__version__)\n",
+    "print(\"SciPy version:\", scipy.__version__)\n",
+    "print(\"Pandas version:\", pandas.__version__)"
    ]
   },
   {
